--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "^6.4.0",
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@mui/material": "^5.3.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
