--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@craco/craco": "^6.4.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@mui/lab": "^5.0.0-alpha.70",
         "@mui/material": "^5.4.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
